integration_tests/codegen_fail/fail/object/argument_wrong_default_array.stderr
error[E0277]: the trait bound `[bool; 2]: From<[bool; 3]>` is not satisfied
 --> fail/object/argument_wrong_default_array.rs:5:1
  |
5 | #[graphql_object]
  | ^^^^^^^^^^^^^^^^^ the trait `From<[bool; 3]>` is not implemented for `[bool; 2]`
  |
  = help: the following implementations were found:
            <&'a [u32; 4] as From<&'a ppv_lite86::x86_64::vec128_storage>>
            <[T; LANES] as From<Simd<T, LANES>>>
            <[bool; LANES] as From<Mask<T, LANES>>>
            <[u128; 1] as From<ppv_lite86::x86_64::vec128_storage>>
          and 8 others
  = note: required because of the requirements on the impl of `Into<[bool; 2]>` for `[bool; 3]`
  = note: this error originates in the attribute macro `graphql_object` (in Nightly builds, run with -Z macro-backtrace for more info)
